@@ -26,7 +26,9 @@
             "toontowner.scenery_small.xxbbbr01",
             "fidwell.scenery_small.xxbbbr01",
             "rct2.scenery_small.roof5",
+            "fidwell.scenery_small.roof5",
             "rct2.scenery_small.roof7",
+            "fidwell.scenery_small.roof7",
             "rct2.scenery_wall.wallrs32",
             "$DAT:0C58B503|IRWRS32C",
             "rct2.scenery_wall.wallrs16",
